Make logo larger and fix left alignment

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -13,7 +13,8 @@
     }
     
     &__logo {
-        height: 2rem;
+        height: 2.75rem;
+        margin-left: -.25rem;
     }
 
     &__menu {
